--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -57,4 +57,4 @@ aurs:
     homepage: "https://github.com/franpfeiffer/t2stock"
     description: "Real-time stock price tracker"
     private_key: "{{ .Env.AUR_KEY }}"
-
+    git_url: "ssh://aur@aur.archlinux.org/t2stock-bin.git"
