--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -58,3 +58,4 @@ aurs:
     description: "Real-time stock price tracker"
     private_key: "{{ .Env.AUR_KEY }}"
     git_url: "ssh://aur@aur.archlinux.org/t2stock-bin.git"
+    license: "MIT"
